<resources>
    <string name="app_name">DicodingEventsApp</string>
    <string name="title_upComing">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="title_home">Home</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="recommendation_event_for_you">Recommendation event for you!</string>
    <string name="search_event_here">Search Event Here…</string>
    <string name="upcoming_events_for_you">Upcoming Events For You</string>
    <string name="finished_event">Finished Event</string>
    <string name="detail_event">Detail Event</string>
    <string name="own_event">Own Event</string>
    <string name="begin_time">Begin Time: </string>
    <string name="example_time">2024–06–07 16:00:00</string>
    <string name="end_time">End Time: </string>
    <string name="remaining_quota">Remaining Quota: </string>
    <string name="example_quota">1000</string>
    <string name="description">Description:</string>
    <string name="register">Register</string>
    <string name="event_not_found">Event Not Found</string>
    <string name="gambar_detail_event">Gambar Detail Event</string>
    <string name="gambar_no_connection">Gambar No Connection</string>
    <string name="gambar_event">Gambar Event</string>
    <string name="no_internet">No Internet</string>
    <string name="fab_favorite">fab_favorite</string>
    <string name="favorite">Favorite</string>
    <string name="your_favorite_events">Your Favorite Events</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="no_favorite_events">No Favorite Events</string>
    <string name="daily_reminder">Daily Reminder</string>
</resources>