<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_upComing"
        android:name="com.rifftyo.dicodingeventsapp.ui.main.UpComingFragment"
        android:label="@string/title_upComing"
        tools:layout="@layout/fragment_upcoming" />

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.rifftyo.dicodingeventsapp.ui.main.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rifftyo.dicodingeventsapp.ui.main.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.rifftyo.dicodingeventsapp.ui.main.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.rifftyo.dicodingeventsapp.ui.main.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />

</navigation>